--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ button:hover{
 #dataDisplay{
     background: #ff004f;
 }
+/*
 .glow {
     animation: glowing 1500ms infinite;
   }
@@ -66,3 +67,4 @@ button:hover{
       box-shadow: 0 0 20px #ff00f7;
     }
   }
+*/
